Update locales to avoid some warnings generated by AMO validator (use en-US if translation is missing), related to issue 5768

--- a/extension/locale/pl/cookies.properties
+++ b/extension/locale/pl/cookies.properties
@@ -10,8 +10,8 @@ cookies.tip.AllowGlobally=Wszystkie ciasteczka będą domyślnie akceptuowane lu
 # LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
 # Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
 # If checked, various cookies events are displayed in Firebug's Console panel.
-cookies.LogEvents=Wyświetlaj zdarzenia w konsoli
-cookies.tip.LogEvents=Różne zdarzenia ciasteczek (zmiany, usunięcie) będą wyświetlane w panelu Konsola
+cookies.showCookieEvents=Wyświetlaj zdarzenia dotyczące ciasteczek
+cookies.tip.showCookieEvents=Zdarzenia dotyczące ciasteczek (zmiana, usunięcie) będą rejestrowane w konsoli
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
 # if the permission is changed to deny.
