--- a/extension/locale/pl/firebug.properties
+++ b/extension/locale/pl/firebug.properties
@@ -60,6 +60,7 @@ minimized=Zminimalizowany
 enablement.for_all_pages=na wszystkich stronach
 enablement.on=Włączony
 enablement.off=Wyłączony
+enablement.Panel_activation_status=Panel activation status:
 none=Zamknięte
 Firebug_-_inactive_for_current_website=Firebug – nieaktywny dla aktualnej witryny
 Activate_Firebug_for_the_current_website=Uaktywnij Firebuga dla aktualnej witryny
@@ -660,6 +661,10 @@ html.tip.Copy_CSS_Path=Kopiuje do schowka ścieżkę CSS elementu
 # LOCALIZATION NOTE (CopySource, dom.tip.Copy_Source): Context menu item of. Used in the Console
 CopyLocation=Kopiuj adres
 clipboard.tip.Copy_Location=Kopiuje do schowka URL położenia obiektu
+CopyURLParameters=Kopiuj parametry URL
+net.tip.Copy_URL_Parameters=Kopiuje parametry URL do schowka
+CopyPOSTParameters=Kopiuj parametry POST
+net.tip.Copy_POST_Parameters=Kopiuje parametry POST do schowka
 CopyLocationParameters=Kopiuj adres z parametrami
 net.tip.Copy_Location_Parameters=Kopiuje do schowka URL włącznie z parametrami
 CopyRequestHeaders=Kopiuj nagłówki żądania
@@ -946,8 +951,8 @@ firebug.NormalTextSize=Normalny rozmiar
 firebug.menu.tip.Normal_Text_Size=Przywraca domyślny rozmiar czcionki używanej w interfejsie Firebuga
 firebug.Website=Witryna Firebuga…
 firebug.menu.tip.Website=Otwiera oficjalną stronę internetową Firebuga
-firebug.FAQ=FAQ…
-firebug.menu.tip.FAQ=Otwiera stronę z odpowiedziami na często zadawane pytania
+firebug.help=Pomoc…
+firebug.menu.tip.help=Otwiera stronę z odnośnikami do stron opisujących działanie Firebuga
 firebug.Documentation=Dokumentacja…
 firebug.menu.tip.Documentation=Otwiera dokumentację Firebuga
 firebug.KeyShortcuts=Skróty klawiszowe…
@@ -1229,15 +1234,12 @@ script.suggestion.no_javascript2=Jeśli znacznik <script> ma atrybut „type” 
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
 # the debugger is already halted at a breakpoint inside another tab/window.
 # The suggestion message represents an advice how to solve the problem.
-# firebug.dtd
-# LOCALIZATION NOTE (firebug.labelWithShortcut):
-# Label for an item incl. assigned keyboard shortcut
 script.warning.debugger_active=Debugger jest aktywny
 script.suggestion.debugger_active=Debugger jest obecne zatrzymany w punkcie wstrzymania na innej stronie.
 script.button.Go_to_that_page=Przejdź do tej strony
 script.warning.debugger_not_activated=Debugger nie został uaktywniony
 script.suggestion.debugger_not_activated=Debugger nie został uaktywniony
-# example: Continue (F8)
+# firebug.dtd
 firebug.Firebug=Firebug
 firebug.Close=Zamknij
 firebug.View=Widok
@@ -1259,15 +1261,15 @@ script.tip.Script_Filter_Static=Wyświetlaj tylko skrypty wczytywane razem ze st
 script.tip.Script_Filter_Evals=Wyświetlaj skrypty wczytywane razem ze stroną i skrypty utworzone za pomocą eval()
 script.tip.Script_Filter_Events=Wyświetlaj skrypty wczytywane razem ze stroną, skrypty utworzone za pomocą elementów nasłuchujących eval() i event
 script.tip.Script_Filter_All=Wyświetlaj wszystkie rodzaje skryptów
+# LOCALIZATION NOTE (firebug.labelWithShortcut):
+# Label for an item incl. assigned keyboard shortcut
+# example: Continue (F8)
 # example: Step Out (Shift+F11)
+firebug.labelWithShortcut=%S (%S)
 # LOCALIZATION NOTE (firebug.Rerun, script.tip.Rerun, firebug.Continue, script.tip.Continue,
 # firebug.StepOver, script.tip.Step_Over, firebug.StepInto, script.tip.Step_Into,
 # firebug.StepOut, script.tip.Step_Out, firebug.RunUntil, script.tip.Run_Until):
-firebug.labelWithShortcut=%S (%S)
 # Labels used for debugger options available in the Script panel.
-# LOCALIZATION NOTE (firebug.Inspect, firebug.InspectElement, firebug.InspectElementWithFirebug)
-# Labels for Firebug Inspector. Used by a button (available in Firefox Customize Toolbar dialog)
-# and also page context menu. As soon as built-in inspector is having its own "Inspect Element"
 script.Rerun=Uruchom ponownie
 script.tip.Rerun=Uruchamia ponownie bieżący stos wywołań funkcji
 script.Continue=Kontynuuj
@@ -1280,10 +1282,10 @@ script.Step_Out=Wykonaj aż do powrotu
 script.tip.Step_Out=Wykonuje resztę funkcji i powraca do miejsca wywołania
 firebug.RunUntil=Wykonaj do tego wiersza
 script.tip.Run_Until=Wykonuje kod JavaScript do określonego wiersza
+# LOCALIZATION NOTE (firebug.Inspect, firebug.InspectElement, firebug.InspectElementWithFirebug)
+# Labels for Firebug Inspector. Used by a button (available in Firefox Customize Toolbar dialog)
+# and also page context menu. As soon as built-in inspector is having its own "Inspect Element"
 # Firebug should start using "Inspect Element with Firebug" to distinguish itself.
-# editors.dtd
-# LOCALIZATION NOTE (firebug.Edit, firebug.css.sourceEdit, firebug.css.liveEdit,
-# firebug.EditCSSTooltip, firebug.css.sourceEdit.tooltip, firebug.css.liveEdit.tooltip)
 firebug.Inspect=Zbadaj
 firebug.InspectElement=Zbadaj element
 firebug.InspectElementWithFirebug=Zbadaj element za pomocą Firebuga
@@ -1297,7 +1299,7 @@ firebug.ClearTooltip=Wyczyść konsolę
 firebug.All=Wszystko
 firebug.Images=Obrazki
 firebug.Flash=Flash
-# Used in the CSS panel for the Edit button.
+# editors.dtd
 editors.Configured_Firebug_Editors=Edytory Firebuga
 editors.Editor=Edytor
 editors.Executable=Wykonywalne
@@ -1318,75 +1320,78 @@ changeEditor.Path_to_local_file=Ścieżka do pliku lokalnego lub do kopii tymcza
 changeEditor.Line_number=Numer wiersza (jeśli jest dostępny)
 changeEditor.Invalid_Application_Path=Nieprawidłowa ścieżka aplikacji
 changeEditor.Application_does_not_exist=Podana ścieżka aplikacji nie istnieje!
-# LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
-# Message displayed in the Console panel when the private browsing mode is on.
-# (in Firefox 4+ it's 'Start Private Browsing')
+# LOCALIZATION NOTE (firebug.Edit, firebug.css.sourceEdit, firebug.css.liveEdit,
+# firebug.EditCSSTooltip, firebug.css.sourceEdit.tooltip, firebug.css.liveEdit.tooltip)
+# Used in the CSS panel for the Edit button.
 firebug.Edit=Edytuj
 firebug.css.sourceEdit=Edytuj źródło
 firebug.css.sourceEdit.tooltip=Edycja źródła stylów po wczytaniu przez przeglądarkę
 firebug.css.liveEdit=Edytuj na bieżąco
 firebug.css.liveEdit.tooltip=Edycja stylów wyodrębnionych z przeglądarki
 firebug.EditCSSTooltip=Edytuj ten arkusz stylów
+# LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
+# Message displayed in the Console panel when the private browsing mode is on.
+# (in Firefox 4+ it's 'Start Private Browsing')
+firebug.activation.privateBrowsingMode=W trybie prywatnym witryny nie są zapamiętywane
 # LOCALIZATION NOTE (firebug.breakpoint.showBreakNotifications):
 # Label used within Script panel's options menu. Represents an option, that can be used
 # to switch of the break notifications.
-firebug.activation.privateBrowsingMode=W trybie prywatnym witryny nie są zapamiętywane
+firebug.breakpoint.showBreakNotifications=Wyświetlaj powiadomienia o wstrzymaniu
+firebug.breakpoint.tip.Show_Break_Notifications=Wyświetlaj powiadomienia, gdy funkcja Wstrzymaj na… lub słowo kluczowe debugger; zatrzymało wykonanie kodu JavaScript
 # LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
 # Message displayed in a break notification popup next to a checkbox.
 # Includes a link enclosed in <a> and </a> to open the panel's options menu.
-firebug.breakpoint.showBreakNotifications=Wyświetlaj powiadomienia o wstrzymaniu
-firebug.breakpoint.tip.Show_Break_Notifications=Wyświetlaj powiadomienia, gdy funkcja Wstrzymaj na… lub słowo kluczowe debugger; zatrzymało wykonanie kodu JavaScript
+firebug.breakpoint.doNotShowBreakNotification2=Można włączyć/wyłączyć powiadomienia zatrzymań, wyświetlając <a>menu etykiety panelu</a>.
 # LOCALIZATION NOTE (firebug.bon.cause.disableDebuggerKeyword2, firebug.bon.tooltip.disableDebuggerKeyword2):
 # Message displayed in a break notification popup when break on debugger; keyword happens.
 # The keyword can be disabled by creating a disabled breakpoint on the same line.
-firebug.breakpoint.doNotShowBreakNotification2=Można włączyć/wyłączyć powiadomienia zatrzymań, wyświetlając <a>menu etykiety panelu</a>.
 # The other label is used for a tooltip on the action button.
-# LOCALIZATION NOTE (firebug.bon.scriptPanelNeeded): A label used by 'Break On Next' button
-# This feature needs the Script panel enabled in order to work.
-# LOCALIZATION NOTE (firebug.dom.noChildren):
 firebug.bon.cause.disableDebuggerKeyword2=Naciśnięcie przycisku „Wyłącz” powoduje zastąpienie „debuger” przez wyłączony punkt zatrzymania.
 firebug.bon.tooltip.disableDebuggerKeyword2=Tworzy wyłączone punkty wstrzymania
+# LOCALIZATION NOTE (firebug.bon.scriptPanelNeeded): A label used by 'Break On Next' button
+# This feature needs the Script panel enabled in order to work.
+firebug.bon.scriptPanelNeeded=(musi być włączony panel Skrypt)
+# LOCALIZATION NOTE (firebug.dom.noChildren):
 # Message displayed in the DOM panel in cases, in which there are no children objects
 # and so nothing to display.
-firebug.bon.scriptPanelNeeded=(musi być włączony panel Skrypt)
+firebug.dom.noChildren2=Nie ma obiektów potomnych
 # LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 # more elements then displayed on the screen. "..." is automatically appended.
-# LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
-firebug.dom.noChildren2=Nie ma obiektów potomnych
-# Label used in the DOM panel for local/session/global storage.
-# It's informing the user about the number of items in the storage.
 firebug.reps.more=więcej
+# LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
+# Label used in the DOM panel for local/session/global storage.
+firebug.reps.reference=Cycle reference detected
+# It's informing the user about the number of items in the storage.
 # %1 = Number of storage items
 # example: 1 item in Storage
 # example: 2 items in Storage
 # LOCALIZATION NOTE (firebug.reps.table.ObjectProperties):
 # Label used in the header of the output of the console.table() method inside the Console panel,
-# if an object is passed into it.
 firebug.storage.totalItems=Przechowywane elementy: %1$S;Przechowywane elementy: %1$S
+# if an object is passed into it.
 # LOCALIZATION NOTE (firebug.completion.empty):
 # Label used in the command line by the auto-complete function.
-# Displayed, if there are no possible completions.
 firebug.reps.table.ObjectProperties=Właściwości obiektu
+# Displayed, if there are no possible completions.
 # LOCALIZATION NOTE (firebug.failedToPreviewObjectURL, firebug.failedToPreviewImageURL):
 # Label used in an image preview infotip in the HTML panel when hovering over an <img> element
-# when loading of the given URL fails. The firebug.failedToPreviewObjectURL is specifically used
 firebug.completion.empty=(brak zakończeń)
+# when loading of the given URL fails. The firebug.failedToPreviewObjectURL is specifically used
 # for moz-filedata (HTML5),
 # see: https://developer.mozilla.org/en/Using_files_from_web_applications#Example.3a_Using_object_URLs_to_display_images
 # LOCALIZATION NOTE (firebug.Memory_Profiler_Started):
 # Message logged into the Console panel when memory profiler session starts.
-# LOCALIZATION NOTE (firebug.Objects_Added_While_Profiling):
 firebug.failedToPreviewObjectURL=Obiekt URL został najprawdopodobniej odwołany przy użyciu metody revokeObjectURL.
 firebug.failedToPreviewImageURL=Nie udało się wczytać podanego adresu URL.
+# LOCALIZATION NOTE (firebug.Objects_Added_While_Profiling):
 # Title for a group (logged into the Console panel), that contains a list of new objects
-# allocated within memory profiler session.
 firebug.Memory_Profiler_Started=Uruchomiono analizator pamięci
+# allocated within memory profiler session.
 # LOCALIZATION NOTE (firebug.Memory_Profiler_Results):
 # Message used within the Console panel when the memory profiler session is finished.
-# LOCALIZATION NOTE (firebug.Entire_Session):
 firebug.Objects_Added_While_Profiling=Obiekty dodane w trakcie analizy
+# LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
-# Message used within the Console panel when the memory profiler session is finished.
 firebug.Memory_Profiler_Results=Wyniki analizy pamięci
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
@@ -1397,3 +1402,38 @@ console.msg.nothing_to_output=(nie ma nic do wysłania)
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
 # Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=(pusty ciąg znaków)
+# LOCALIZATION NOTE (cookies.legacy.firecookie_detected, cookies.legacy.uninstall, cookies.legacy.uninstall_and_restart):
+# A message and labels used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=Wykryto dodatek Firecookie. Ten dodatek został zintegrowany z Firebugiem 1.10. Aby zapobiec ewentualnym konfliktom, należy wykonać dezinstalację Firecookie.\n\nFirecookie zostanie całkowicie odinstalowany po ponownym uruchomieniu aplikacji.
+cookies.legacy.uninstall=Odinstaluj
+cookies.legacy.uninstall_and_restart=Odinstaluj i uruchom ponownie
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=API wiersza poleceń
+console.cmd.help_title_desc=Naciśnij klawisz F1, by otworzyć pomoc Firebuga online
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=Zwraca pojedynczy element o podanym ID.
+console.cmd.help.$$=Zwraca tablicę elementów pasujących do podanego selektora CSS.
+console.cmd.help.$x=Zwraca tablicę elementów pasujących do podanego wyrażenia XPath.
+console.cmd.help.dir=Prints an interactive listing of all properties of the object. This looks identical to the view inside the DOM panel.
+console.cmd.help.dirxml=Prints the XML source tree of an HTML or XML element. This looks identical to the view inside the HTML panel. You can click on any node to inspect it in the HTML panel.
+console.cmd.help.cd=By default, command line expressions are relative to the top-level window of the page. cd() allows you to use the window of a frame in the page instead.
+console.cmd.help.clear=Clears the console.
+console.cmd.help.copy=Copies the given parameter to the clipboard. This can be a return value of a function or an object.
+console.cmd.help.inspect=Inspects an object in the most suitable panel, or the panel identified by the optional second argument. The available panel names are "html", "stylesheet", "script", and "dom".
+console.cmd.help.keys=Returns an array containing the names of all properties of the object.
+console.cmd.help.values=Returns an array containing the values of all properties of the object.
+console.cmd.help.debug=Adds a breakpoint on the first line of a function.
+console.cmd.help.undebug=Removes the breakpoint on the first line of a function.
+console.cmd.help.monitor=Turns on logging for all calls to a function.
+console.cmd.help.unmonitor=Turns off logging for all calls to a function.
+console.cmd.help.monitorEvents=Turns on logging for all events dispatched to an object. The optional second argument may define specific events or event types to log. The available event types are "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", and "clipboard".
+console.cmd.help.unmonitorEvents=Turns off logging for all events dispatched to an object. The optional second argument may define specific events or event families, for which to turn logging off.
+console.cmd.help.profile=Turns on the JavaScript profiler. The optional second argument contains the text to be printed in the header of the profile report.
+console.cmd.help.profileEnd=Turns off the JavaScript profiler and prints its report.
+console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table-like data (array of arrays or list of objects). The optional second parameter can be used to specify columns and/or properties to be logged.
+console.cmd.help.$0=Represents the last element selected via the Inspector.
+console.cmd.help.$1=Represents the second last element selected via the Inspector.
+console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
+console.cmd.help.help=Displays help for all available commands.
