--- a/extension/locale/zh-TW/cookies.properties
+++ b/extension/locale/zh-TW/cookies.properties
@@ -10,8 +10,8 @@ cookies.tip.AllowGlobally=預設接受或拒絕所有 cookie
 # LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
 # LOCALIZATION NOTE (cookies.LogEvents): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, various cookies events are
-cookies.LogEvents=在 console 中顯示 log
-cookies.tip.LogEvents=在主控台面板顯示各種 cookie 事件
+cookies.showCookieEvents=Show Cookie Events
+cookies.tip.showCookieEvents=Log cookie events (changed, deleted) into the console
 # displayed in Firebug's Console panel.
 # LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
 # small arrow next to the Cookies panel label). If checked, cookies are automatically removed
