--- a/extension/locale/zh-TW/firebug.properties
+++ b/extension/locale/zh-TW/firebug.properties
@@ -60,6 +60,7 @@ minimized=最小化的
 enablement.for_all_pages=對所有網頁
 enablement.on=啟用
 enablement.off=關閉
+enablement.Panel_activation_status=Panel activation status:
 none=關閉的
 Firebug_-_inactive_for_current_website=Firebug - 對目前網站未啟動
 Activate_Firebug_for_the_current_website=對目前網站啟動 Firebug
@@ -660,6 +661,10 @@ html.tip.Copy_CSS_Path=將元素的 CSS path 複製到剪貼簿
 # examples: Failed to load source for: http://www.example.com/script.jsnn
 CopyLocation=複製網址
 clipboard.tip.Copy_Location=將物件位址的 URL 複製到剪貼簿
+CopyURLParameters=Copy URL Parameters
+net.tip.Copy_URL_Parameters=Copy URL parameters to the clipboard
+CopyPOSTParameters=Copy POST Parameters
+net.tip.Copy_POST_Parameters=Copy POST parameters to the clipboard
 CopyLocationParameters=複製網址，包含參數
 net.tip.Copy_Location_Parameters=將 URL（包括參數）一起複製到剪貼簿
 CopyRequestHeaders=複製請求標頭
@@ -946,8 +951,8 @@ firebug.NormalTextSize=正常文字大小
 firebug.menu.tip.Normal_Text_Size=重設 Firebug 文字大小為預設值
 firebug.Website=Firebug 網站...
 firebug.menu.tip.Website=開啟 Firebug 官方網站
-firebug.FAQ=FAQ...
-firebug.menu.tip.FAQ=開啟「常見問答」網頁
+firebug.help=Help...
+firebug.menu.tip.help=Open the page with links to pages explaining Firebug
 firebug.Documentation=文件...
 firebug.menu.tip.Documentation=開啟 Firebug 文件說明
 firebug.KeyShortcuts=快速鍵...
@@ -1229,15 +1234,12 @@ script.suggestion.no_javascript2=若 <script> 標籤有「type」屬性，其值
 # firebug.dtd
 # LOCALIZATION NOTE (firebug.labelWithShortcut):
 # Label for an item incl. assigned keyboard shortcut
-# example: Continue (F8)
-# example: Step Out (Shift+F11)
-# LOCALIZATION NOTE (firebug.Rerun, script.tip.Rerun, firebug.Continue, script.tip.Continue,
 script.warning.debugger_active=Debugger 已啟用
 script.suggestion.debugger_active=Debugger 已於其他頁面的中斷點暫停。
 script.button.Go_to_that_page=前往該頁面
 script.warning.debugger_not_activated=Debugger 未啟動
 script.suggestion.debugger_not_activated=Debugger 未啟動
-# firebug.StepOver, script.tip.Step_Over, firebug.StepInto, script.tip.Step_Into,
+# example: Continue (F8)
 firebug.Firebug=Firebug
 firebug.Close=關閉
 firebug.View=檢視
@@ -1259,15 +1261,15 @@ script.tip.Script_Filter_Static=只顯示和頁面一起載入的 script
 script.tip.Script_Filter_Evals=顯示和頁面一起載入的，或由 eval() 建立的 script
 script.tip.Script_Filter_Events=顯示和頁面一起載入、由 eval() 建立的 script，以及事件處理函數
 script.tip.Script_Filter_All=Display all kinds of scripts
+# example: Step Out (Shift+F11)
+# LOCALIZATION NOTE (firebug.Rerun, script.tip.Rerun, firebug.Continue, script.tip.Continue,
+# firebug.StepOver, script.tip.Step_Over, firebug.StepInto, script.tip.Step_Into,
 # firebug.StepOut, script.tip.Step_Out, firebug.RunUntil, script.tip.Run_Until):
+firebug.labelWithShortcut=%S (%S)
 # Labels used for debugger options available in the Script panel.
 # LOCALIZATION NOTE (firebug.Inspect, firebug.InspectElement, firebug.InspectElementWithFirebug)
 # Labels for Firebug Inspector. Used by a button (available in Firefox Customize Toolbar dialog)
-firebug.labelWithShortcut=%S (%S)
 # and also page context menu. As soon as built-in inspector is having its own "Inspect Element"
-# Firebug should start using "Inspect Element with Firebug" to distinguish itself.
-# editors.dtd
-# LOCALIZATION NOTE (firebug.Edit, firebug.css.sourceEdit, firebug.css.liveEdit,
 script.Rerun=Rerun
 script.tip.Rerun=重新執行目前函數呼叫堆疊
 script.Continue=Continue
@@ -1280,10 +1282,10 @@ script.Step_Out=Step Out
 script.tip.Step_Out=執行整個函數內容並返回其 caller
 firebug.RunUntil=Run to This Line
 script.tip.Run_Until=執行到這一行為止的 JavaScript
+# Firebug should start using "Inspect Element with Firebug" to distinguish itself.
+# editors.dtd
+# LOCALIZATION NOTE (firebug.Edit, firebug.css.sourceEdit, firebug.css.liveEdit,
 # firebug.EditCSSTooltip, firebug.css.sourceEdit.tooltip, firebug.css.liveEdit.tooltip)
-# Used in the CSS panel for the Edit button.
-# LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
-# Message displayed in the Console panel when the private browsing mode is on.
 firebug.Inspect=觀察
 firebug.InspectElement=觀察元素
 firebug.InspectElementWithFirebug=使用 Firebug 觀察元素
@@ -1297,7 +1299,7 @@ firebug.ClearTooltip=清空主控台
 firebug.All=全部
 firebug.Images=圖片
 firebug.Flash=Flash
-# (in Firefox 4+ it's 'Start Private Browsing')
+# Used in the CSS panel for the Edit button.
 editors.Configured_Firebug_Editors=設定 Firebug 編輯器
 editors.Editor=編輯器
 editors.Executable=執行檔
@@ -1318,82 +1320,120 @@ changeEditor.Path_to_local_file=本地端檔案的路徑（或暫存檔的路徑
 changeEditor.Line_number=行號（若有的話）
 changeEditor.Invalid_Application_Path=不正確的應用程式路徑
 changeEditor.Application_does_not_exist=指定的應用程式不存在！
-# LOCALIZATION NOTE (firebug.breakpoint.showBreakNotifications):
-# Label used within Script panel's options menu. Represents an option, that can be used
-# to switch of the break notifications.
+# LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
+# Message displayed in the Console panel when the private browsing mode is on.
+# (in Firefox 4+ it's 'Start Private Browsing')
 firebug.Edit=編輯
 firebug.css.sourceEdit=原始碼編輯
 firebug.css.sourceEdit.tooltip=文字區域編輯，使用瀏覽器載入的樣式表原始碼
 firebug.css.liveEdit=即時編輯
 firebug.css.liveEdit.tooltip=文字區域編輯，使用瀏覽器解析後的 CSS 結果
 firebug.EditCSSTooltip=編輯此樣式表
+# LOCALIZATION NOTE (firebug.breakpoint.showBreakNotifications):
+# Label used within Script panel's options menu. Represents an option, that can be used
+# to switch of the break notifications.
+firebug.activation.privateBrowsingMode=在私密瀏覽模式中不會記錄任何網站
 # LOCALIZATION NOTE (firebug.activation.privateBrowsingMode):
 # Message displayed in a break notification popup next to a checkbox.
 # Includes a link enclosed in <a> and </a> to open the panel's options menu.
-firebug.activation.privateBrowsingMode=在私密瀏覽模式中不會記錄任何網站
+firebug.breakpoint.showBreakNotifications=顯示中斷點提示通知
+firebug.breakpoint.tip.Show_Break_Notifications=「在 ... 時中斷」功能或 debugger; 關鍵字造成 JavaScript 停止執行時，顯示通知框
 # LOCALIZATION NOTE (firebug.bon.cause.disableDebuggerKeyword2, firebug.bon.tooltip.disableDebuggerKeyword2):
 # Message displayed in a break notification popup when break on debugger; keyword happens.
 # The keyword can be disabled by creating a disabled breakpoint on the same line.
-firebug.breakpoint.showBreakNotifications=顯示中斷點提示通知
-firebug.breakpoint.tip.Show_Break_Notifications=「在 ... 時中斷」功能或 debugger; 關鍵字造成 JavaScript 停止執行時，顯示通知框
+firebug.breakpoint.doNotShowBreakNotification2=您可以在<a>面板的分頁選單</a>停用／啟用中斷點提示通知。
 # The other label is used for a tooltip on the action button.
 # LOCALIZATION NOTE (firebug.bon.scriptPanelNeeded): A label used by 'Break On Next' button
 # This feature needs the Script panel enabled in order to work.
-firebug.breakpoint.doNotShowBreakNotification2=您可以在<a>面板的分頁選單</a>停用／啟用中斷點提示通知。
 # LOCALIZATION NOTE (firebug.dom.noChildren):
-# Message displayed in the DOM panel in cases, in which there are no children objects
-# and so nothing to display.
-# LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 firebug.bon.cause.disableDebuggerKeyword2=按下「停用」按鈕，以一個停用的中斷點覆蓋 'debugger' 關鍵字
 firebug.bon.tooltip.disableDebuggerKeyword2=新增已停用中斷點
+# Message displayed in the DOM panel in cases, in which there are no children objects
+# and so nothing to display.
+firebug.bon.scriptPanelNeeded=（需要啟用 Script 面板才能使用此功能）
+# LOCALIZATION NOTE (firebug.reps.more): Label shown when the displayed array/list has
 # more elements then displayed on the screen. "..." is automatically appended.
 # LOCALIZATION NOTE (firebug.storage.totalItems): Semicolon list of plural forms.
-firebug.bon.scriptPanelNeeded=（需要啟用 Script 面板才能使用此功能）
+firebug.dom.noChildren2=沒有子物件
 # Label used in the DOM panel for local/session/global storage.
 # It's informing the user about the number of items in the storage.
-# %1 = Number of storage items
-firebug.dom.noChildren2=沒有子物件
-# example: 1 item in Storage
-# example: 2 items in Storage
 firebug.reps.more=更多
+# %1 = Number of storage items
+# example: 1 item in Storage
+firebug.reps.reference=Cycle reference detected
+# example: 2 items in Storage
 # LOCALIZATION NOTE (firebug.reps.table.ObjectProperties):
 # Label used in the header of the output of the console.table() method inside the Console panel,
 # if an object is passed into it.
 # LOCALIZATION NOTE (firebug.completion.empty):
 # Label used in the command line by the auto-complete function.
-# Displayed, if there are no possible completions.
 firebug.storage.totalItems=Storage 中有 %S 個項目
+# Displayed, if there are no possible completions.
 # LOCALIZATION NOTE (firebug.failedToPreviewObjectURL, firebug.failedToPreviewImageURL):
 # Label used in an image preview infotip in the HTML panel when hovering over an <img> element
-# when loading of the given URL fails. The firebug.failedToPreviewObjectURL is specifically used
 firebug.reps.table.ObjectProperties=物件屬性
+# when loading of the given URL fails. The firebug.failedToPreviewObjectURL is specifically used
 # for moz-filedata (HTML5),
 # see: https://developer.mozilla.org/en/Using_files_from_web_applications#Example.3a_Using_object_URLs_to_display_images
-# LOCALIZATION NOTE (firebug.Memory_Profiler_Started):
 firebug.completion.empty=(沒有可用的自動完成項目)
+# LOCALIZATION NOTE (firebug.Memory_Profiler_Started):
 # Message logged into the Console panel when memory profiler session starts.
 # LOCALIZATION NOTE (firebug.Objects_Added_While_Profiling):
 # Title for a group (logged into the Console panel), that contains a list of new objects
 # allocated within memory profiler session.
-# LOCALIZATION NOTE (firebug.Memory_Profiler_Results):
 firebug.failedToPreviewObjectURL=URL 物件可能已被 revokeObjectURL 方法取消。
 firebug.failedToPreviewImageURL=讀取 URL 失敗。
-# Message used within the Console panel when the memory profiler session is finished.
-# LOCALIZATION NOTE (firebug.Entire_Session):
-firebug.Memory_Profiler_Started=Memory Profiler 已啟動
-# Label used within memory profiler results to mark summary information for entire session.
-# Title for a group (logged into the Console panel), that contains a list of new objects
-# allocated within memory profiler session.
-firebug.Objects_Added_While_Profiling=Profile 進行中，物件已加入
 # LOCALIZATION NOTE (firebug.Memory_Profiler_Results):
 # Message used within the Console panel when the memory profiler session is finished.
-firebug.Memory_Profiler_Results=Memory Profiler 結果
+firebug.Memory_Profiler_Started=Memory Profiler 已啟動
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
+# Title for a group (logged into the Console panel), that contains a list of new objects
+firebug.Objects_Added_While_Profiling=Profile 進行中，物件已加入
+# allocated within memory profiler session.
+# LOCALIZATION NOTE (firebug.Memory_Profiler_Results):
+firebug.Memory_Profiler_Results=Memory Profiler 結果
+# Message used within the Console panel when the memory profiler session is finished.
+# LOCALIZATION NOTE (firebug.Entire_Session):
 firebug.Entire_Session=整個 Session
+# Label used within memory profiler results to mark summary information for entire session.
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
-# Used by the console panel if a Console API is used without any argument.
 console.msg.nothing_to_output=（沒有結果可顯示）
+# Used by the console panel if a Console API is used without any argument.
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
-# Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=（空字串）
+# Used by the console panel if an empty string is passed into a Console API.
+# A message and labels used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=Firecookie add-on is detected. This add-on has been integrated with Firebug 1.10 by default. To avoid a collision you need to uninstall Firecookie. \n\nYou must restart to finish uninstalling the add-on.
+cookies.legacy.uninstall=Uninstall
+cookies.legacy.uninstall_and_restart=Uninstall && Restart
+# LOCALIZATION NOTE (firebug.cmd.help.values, console.cmd.help_title_desc):
+console.cmd.help_title=Command Line API
+console.cmd.help_title_desc=Press F1 to open online Firebug help
+# LOCALIZATION NOTE (console.cmd.help.$): Description for Command Line API that is logged
+# in the the Console panel if the user types "help" into the command line.
+console.cmd.help.$=Returns a single element with the given id.
+console.cmd.help.$$=Returns an array of elements that match the given CSS selector.
+console.cmd.help.$x=Returns an array of elements that match the given XPath expression.
+console.cmd.help.dir=Prints an interactive listing of all properties of the object. This looks identical to the view inside the DOM panel.
+console.cmd.help.dirxml=Prints the XML source tree of an HTML or XML element. This looks identical to the view inside the HTML panel. You can click on any node to inspect it in the HTML panel.
+console.cmd.help.cd=By default, command line expressions are relative to the top-level window of the page. cd() allows you to use the window of a frame in the page instead.
+console.cmd.help.clear=Clears the console.
+console.cmd.help.copy=Copies the given parameter to the clipboard. This can be a return value of a function or an object.
+console.cmd.help.inspect=Inspects an object in the most suitable panel, or the panel identified by the optional second argument. The available panel names are "html", "stylesheet", "script", and "dom".
+console.cmd.help.keys=Returns an array containing the names of all properties of the object.
+console.cmd.help.values=Returns an array containing the values of all properties of the object.
+console.cmd.help.debug=Adds a breakpoint on the first line of a function.
+console.cmd.help.undebug=Removes the breakpoint on the first line of a function.
+console.cmd.help.monitor=Turns on logging for all calls to a function.
+console.cmd.help.unmonitor=Turns off logging for all calls to a function.
+console.cmd.help.monitorEvents=Turns on logging for all events dispatched to an object. The optional second argument may define specific events or event types to log. The available event types are "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", and "clipboard".
+console.cmd.help.unmonitorEvents=Turns off logging for all events dispatched to an object. The optional second argument may define specific events or event families, for which to turn logging off.
+console.cmd.help.profile=Turns on the JavaScript profiler. The optional second argument contains the text to be printed in the header of the profile report.
+console.cmd.help.profileEnd=Turns off the JavaScript profiler and prints its report.
+console.cmd.help.table=Allows to log provided data using tabular layout. The method takes one required parameter that represents table-like data (array of arrays or list of objects). The optional second parameter can be used to specify columns and/or properties to be logged.
+console.cmd.help.$0=Represents the last element selected via the Inspector.
+console.cmd.help.$1=Represents the second last element selected via the Inspector.
+console.cmd.help.$n=Returns one of the 5 last elements selected via the Inspector. This method takes one required parameter, which represents the index of the element (starting at 0).
+console.cmd.help.help=Displays help for all available commands.
