Update locale: nl

--- a/extension/locale/nl/cookies.properties
+++ b/extension/locale/nl/cookies.properties
@@ -5,7 +5,7 @@ panel.tip.cookies=Maakt inspectie en manipulatie van cookies mogelijk
 cookies.Session=Sessie
 # LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
 # LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
-cookies.AllowGlobally=Cookies van sites accepteren
+cookies.AllowGlobally=Cookies van websites accepteren
 cookies.tip.AllowGlobally=Standaard alle cookies accepteren of blokkeren
 # LOCALIZATION NOTE (cookies.AllowGlobally): Label used for cookies permission.
 # LOCALIZATION NOTE (cookies.LogEvents): Label used in Cookies panel options menu (the
@@ -61,7 +61,7 @@ cookies.confirm.removeall=Wilt u alle cookies in de lijst verwijderen?
 cookies.confirm.removeallsession=Wilt u alle sessiecookies in de lijst opslaan?
 # all session cookies are going to be deleted
 # LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
-cookies.confirm.Remove_All_From_Host=Do you want to remove all cookies from %S?
+cookies.confirm.Remove_All_From_Host=Wilt u alle cookies van %S verwijderen?
 # Message within a confirmation dialog that is displayed when deleting cookies.
 # This message is displayed next to a check-box that can be used to disabled this
 # confirmation.
@@ -268,5 +268,5 @@ cookies.console.Filter_By_Cookies=Filteren op cookies
 # LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
 # Customize Shortcuts dialog (Firebug menu)
 firebug.shortcut.removeAllCookies.label=Alle cookies verwijderen
-cookie.sizeinfo.Size=Size
-cookie.sizeinfo.Raw_Size=Raw Size
+cookie.sizeinfo.Size=Grootte
+cookie.sizeinfo.Raw_Size=Ruwe grootte
