--- a/extension/locale/nl/firebug.properties
+++ b/extension/locale/nl/firebug.properties
@@ -97,8 +97,8 @@ ShowJavaScriptWarnings=JavaScriptwaarschuwingen weergeven
 console.option.tip.Show_JavaScript_Warnings=JavaScriptwaarschuwingen naar console loggen
 ShowCSSErrors=CSS-fouten weergeven
 console.option.tip.Show_CSS_Errors=CSS-fouten naar console loggen
-ShowXMLHTMLErrors=Show XML/HTML Errors
-console.option.tip.Show_XML_HTML_Errors=Log XML and HTML error messages into the console
+ShowXMLHTMLErrors=XML-/HTML-fouten weergeven
+console.option.tip.Show_XML_HTML_Errors=XML- en HTML-fouten naar de console loggen
 ShowStackTrace=Stack trace voor fouten weergeven
 console.option.tip.Show_Stack_Trace=Stack trace-informatie voor foutberichten weergeven
 ShowXMLHttpRequests=XMLHTTP-aanvragen weergeven
@@ -401,9 +401,9 @@ watch.tip.Edit_Watch=De volgexpressie-waarde bewerken
 DeleteProperty=Eigenschap verwijderen
 dom.tip.Delete_Property=De eigenschap verwijderen
 DeleteWatch=Watch verwijderen
-DeleteAllWatches=Delete All Watches
+DeleteAllWatches=Alle volgopdrachten wissen
 watch.tip.Delete_Watch=De volgexpressie verwijderen
-watch.tip.Delete_All_Watches=Delete all the watch expressions
+watch.tip.Delete_All_Watches=Alle volguitdrukkingen wissen
 # LOCALIZATION NOTE (SetBreakpoint, script.tip.Set_Breakpoint): Context menu item of the Script panel.
 # Toggles setting of a breakpoint at the current line of a script inside the Script panel.
 SetBreakpoint=Afbreekpunt instellen
@@ -715,7 +715,7 @@ commandline.MethodNotSupported=De Firebug-opdrachtregel ondersteunt ‘%S’ nie
 # LOCALIZATION NOTE (commandline.CurrentWindow): Message displayed in the Console panel when
 # cd(someWindow) is run. A space and a representation of the window object is appended
 # internally by Firebug.
-commandline.CurrentWindow=Current window:
+commandline.CurrentWindow=Huidig venster:
 # LOCALIZATION NOTE (console.Disable_Break_On_All_Errors, console.Break_On_All_Errors):
 # Tooltip for the "Break on... " button used when the Console panel is selected.
 console.Disable_Break_On_All_Errors=Afbreken op alle fouten uitschakelen
@@ -1187,7 +1187,7 @@ confirmation.Edit_CSS_Source=Uw bestaande CSS-bewerkingen worden geannuleerd.\\n
 # Console messages
 warning.Console_must_be_enabled=Console dient te zijn ingeschakeld
 warning.Command_line_blocked?=Opdrachtregel geblokkeerd?
-warning.dollar_change=The console command line function $() has changed meaning from $=getElementById(id) to $=querySelector(selector). You might try $("#%S") instead.
+warning.dollar_change=De betekenis van de console-opdrachtregelfunctie $() is gewijzigd van $=getElementById(id) in $=querySelector(selecteur). U kunt wellicht $(“#%S”) proberen.
 message.Reload_to_activate_window_console=Herladen om de vensterconsole te activeren
 # LOCALIZATION NOTE (message.sourceNotAvailableFor, message.The_resource_from_this_URL_is_not_text):
 # An error message displayed in the Script panel when a source can't be displayed
@@ -1444,36 +1444,36 @@ console.cmd.help.help=Geeft hulptekst weer voor alle beschikbare opdrachten.
 # LOCALIZATION NOTE (console.cmd.helpUrlNotAvailable): A message used displayed to the user
 # if registered command doesn't have help URL associated and the user clicks on the command name.
 # List of command names is displayed if you type "help" (without quotes) into the command line.
-console.cmd.helpUrlNotAvailable=Help page for this command is not available.
+console.cmd.helpUrlNotAvailable=Voor deze opdracht is geen hulppagina beschikbaar.
 # LOCALIZATION NOTE (css.selector.noSelection): A help description used in empty
 # Selection side panel.
-css.selector.noSelection=Type custom selector or right click CSS rule and pick <b>Get Matching Elements</b>.
-css.selector.noSelectionResults=No matching elements
-css.selector.selectorError=Selection failed:
+css.selector.noSelection=Type een aangepaste selecteur of rechtsklik op de CSS-regel en kies <b>Overeenkomstige elementen ophalen</b>.
+css.selector.noSelectionResults=Geen overeenkomstige elementen
+css.selector.selectorError=Selectie mislukt:
 # LOCALIZATION NOTE (css.selector.Selection): Title for Selector side panel displayed
 # in the CSS panel.
-css.selector.Selection=Elements
+css.selector.Selection=Elementen
 # LOCALIZATION NOTE (panel.tip.selector): Tooltip text for the Selection side panel
 # Shown when hovering the Selection panel tab
-panel.tip.selector=Displays elements matching a CSS selector
-css.selector.TryASelector=Try a selector...
+panel.tip.selector=Geeft elementen weer die met een CSS-selecteur overeenkomen
+css.selector.TryASelector=Een selecteur proberen…
 # LOCALIZATION NOTE (css.selector.cmd.getMatchingElements): A label for context menu item.
 # The menu-item is used in the CSS panel's context menu and allows to get matched elements
 # for the clicked rule selector. Elements are displayed in the side panel.
-css.selector.cmd.getMatchingElements=Get Matching Elements
+css.selector.cmd.getMatchingElements=Overeenkomstige elementen ophalen
 # LOCALIZATION NOTE (css.selector.unknownErrorMessage): An error message displayed
 # to the user if querySelectorAll (used by the Selector side panel) fails and there is no
 # explanantion coming from the platform.
-css.selector.unknownErrorMessage=Failed to execute specified selector string
+css.selector.unknownErrorMessage=Uitvoeren opgegeven selecteurstring mislukt
 # LOCALIZATION NOTE (perftiming.bars.label, perftiming.events.label): A label used in a tooltip
 # for performance.timing graph.
 # The graph is displayed in the Console when the user executes "performance.timing" expression.
-perftiming.bars.label=Document phases start and elapsed time relative to the document load:
-perftiming.events.label=Event timing relative to the document load:
+perftiming.bars.label=Documentfasen-start en verstreken tijd relatief aan het laden van het document:
+perftiming.events.label=Gebeurtenistiming relatief aan laden document:
 # LOCALIZATION NOTE (perftiming.details_title, perftiming.details_title_desc): A label used
 # for detailed performance timing info table.
-perftiming.details_title=Perfomance Timing
-perftiming.details_title_desc=Detailed timing
+perftiming.details_title=Prestatietiming
+perftiming.details_title_desc=Gedetailleerde timing
 # LOCALIZATION NOTE (perftiming.connectEnd, perftiming.connectStart,
 # perftiming.domContentLoadedEventEnd, perftiming.domContentLoadedEventStart,
 # perftiming.domInteractive, perftiming.domLoading, perftiming.domainLookupEnd,
@@ -1483,24 +1483,24 @@ perftiming.details_title_desc=Detailed timing
 # perftiming.responseEnd, perftiming.responseStart, perftiming.timing, perftiming.unloadEventEnd,
 # perftiming.unloadEventStart): Description for performance timing field. Displayed when
 # the user executes 'performance.timing' in the command line.
-perftiming.connectEnd=Time when server connection is finished.
-perftiming.connectStart=Time just before server connection begins.
-perftiming.domComplete=Time just before document readiness completes.
-perftiming.domContentLoadedEventEnd=Time after DOMContentLoaded event completes.
-perftiming.domContentLoadedEventStart=Time just before DOMContentLoaded starts.
-perftiming.domInteractive=Time just before readiness set to interactive.
-perftiming.domLoading=Time just before readiness set to loading.
-perftiming.domainLookupEnd=Time after domain name lookup.
-perftiming.domainLookupStart=Time just before domain name lookup.
-perftiming.fetchStart=Time when the resource starts being fetched.
-perftiming.loadEventEnd=Time when the load event is complete.
-perftiming.loadEventStart=Time just before the load event is fired.
-perftiming.navigationStart=Time after the previous document begins unload.
-perftiming.redirectCount=Number of redirects since the last non-redirect.
-perftiming.redirectEnd=Time after last redirect response ends.
-perftiming.redirectStart=Time of fetch that initiated a redirect.
-perftiming.requestStart=Time just before a server request.
-perftiming.responseEnd=Time after the end of a response or connection.
-perftiming.responseStart=Time just before the start of a response.
-perftiming.unloadEventEnd=Time after the previous document is unloaded.
-perftiming.unloadEventStart=Time just before the unload event is fired.
+perftiming.connectEnd=Tijdstip bij afsluiten serververbinding.
+perftiming.connectStart=Tijdstip voor aanvang serververbinding.
+perftiming.domComplete=Tijdstip vlak voor gereedmelding document.
+perftiming.domContentLoadedEventEnd=Tijdstip na afronding DOMContentLoaded-gebeurtenis.
+perftiming.domContentLoadedEventStart=Tijdstip vlak voor starten DOMContentLoaded.
+perftiming.domInteractive=Tijdstip vlak voor instellen gereedheid op interactief.
+perftiming.domLoading=Tijdstip vlak voor instellen gereedheid op laden.
+perftiming.domainLookupEnd=Tijdstip na opzoeken domeinnaam.
+perftiming.domainLookupStart=Tijdstip vlak voor opzoeken domeinnaam.
+perftiming.fetchStart=Tijdstip dat ophalen hulpbron start.
+perftiming.loadEventEnd=Tijdstip van afronden laden.
+perftiming.loadEventStart=Tijdstip vlak voor laden start.
+perftiming.navigationStart=Tijdstip nadat vorige document wordt ontladen.
+perftiming.redirectCount=Aantal doorgeleidingen sinds laatste niet-doorgeleiding.
+perftiming.redirectEnd=Tijdstip nadat laatste doorleidantwoord eindigt.
+perftiming.redirectStart=Tijdstip van ophalen van een doorleiding.
+perftiming.requestStart=Tijdstip vlak voor een serveraanvraag.
+perftiming.responseEnd=Tijdstip na einde van een antwoord of verbinding.
+perftiming.responseStart=Tijdstip vlak voor begin van een antwoord.
+perftiming.unloadEventEnd=Tijdstip na ontladen van vorig document.
+perftiming.unloadEventStart=Tijdstip vlak voordat een ontladingsgebeurtenis is gestart.
