Some follow-up fixes to issue 5878
See issue 6056.

Patch by Florent FAYOLLE.

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -782,6 +782,14 @@ commandline.include.invalidAliasName=alias names must not contain any "." or "/"
 # %S = the invalid alias name
 commandline.include.tooLongAliasName=alias names must not contain more than 30 characters; invalid alias name: "%S"
 
+# LOCALIZATION NOTE (commandline.include.wrongAliasArgument): For the include() function. This message is displayed
+# in the Console panel if the provided alias name is invalid
+commandline.include.wrongAliasArgument=wrong alias argument; expected string
+
+# LOCALIZATION NOTE (commandline.include.wrongUrlArgument): For the include() function. This message is displayed
+# in the Console panel if the provided url argument is invalid
+commandline.include.wrongUrlArgument=wrong url argument; expected string or null
+
 # LOCALIZATION NOTE (commandline.include.confirmDelete): For the include() function. This message is displayed
 # in a confirmation dialog when the user wants to delete an alias
 # %S = the name of the alias to delete
