issue5358: Allow pasting HTML Content in the Panel

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -659,6 +659,26 @@ CopyXPath=Copy XPath
 html.tip.Copy_XPath=Copy the element's XPath to the clipboard
 Copy_CSS_Path=Copy CSS Path
 html.tip.Copy_CSS_Path=Copy the element's CSS path to the clipboard
+# LOCALIZATION NOTE (html.menu.Paste, html.tip.Paste): Context menu item (with subitems).
+# Used in the HTML Panel to paste HTML/SVG/XML/XUL/MathML contents
+# %S = the type of the content to paste (HTML, SVG, XML, XUL or MathML)
+html.menu.Paste=Paste %S
+html.tip.Paste=Paste as %S Content
+# LOCALIZATION NODE (html.menu.Paste_*, html.tip.Paste_*): Context menu items.
+# These items are paste options, and appears as subitems of html.menu.Paste in the context menu.
+html.menu.Paste_Replace_Content=Replace Content
+html.tip.Paste_Replace_Content=Replace the content of the node
+html.menu.Paste_Replace_Node=Replace Node
+html.tip.Paste_Replace_Node=Replace the HTML of the node
+html.menu.Paste_AsFirstChild=As First Child
+html.tip.Paste_AsFirstChild=Paste as the first child of the node
+html.menu.Paste_AsLastChild=As Last Child
+html.tip.Paste_AsLastChild=Paste as the last child of the node
+html.menu.Paste_Before=Before
+html.tip.Paste_Before=Paste before the node
+html.menu.Paste_After=After
+html.tip.Paste_After=Paste after the node
+
 # LOCALIZATION NOTE (CopyError, console.menu.tip.Copy_Error): Context menu item. Used in the Console
 # panel when clicking an error object.
 CopyLocation=Copy Location
