some minor modifications for include() (issue6056)

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -775,7 +775,7 @@ commandline.include.aliasNotFound=Alias "%S" not found.
 # LOCALIZATION NOTE (commandline.include.loadFail): For the include() function. This message is displayed
 # in the Console panel when the remote script download failed
 # %S = the filename
-commandline.include.loadFail=%S failed to load.
+commandline.include.loadFail=the following script could not be loaded: %S.
 
 # LOCALIZATION NOTE (commandline.include.invalidRequestProtocol): For the include() function. This message is displayed
 # in the Console panel when the user tries to download a script with another scheme than HTTP(S)
@@ -804,11 +804,11 @@ commandline.include.tooLongAliasName=Alias names must not contain more than 30 c
 
 # LOCALIZATION NOTE (commandline.include.wrongAliasArgument): For the include() function. This message is displayed
 # in the Console panel if the provided alias name is invalid
-commandline.include.wrongAliasArgument=Wrong alias argument; expected string.
+commandline.include.wrongAliasArgument=Wrong alias name.
 
 # LOCALIZATION NOTE (commandline.include.wrongUrlArgument): For the include() function. This message is displayed
 # in the Console panel if the provided url argument is invalid
-commandline.include.wrongUrlArgument=Wrong url argument; expected string or null.
+commandline.include.wrongUrlArgument=Wrong url argument.
 
 # LOCALIZATION NOTE (commandline.include.confirmDelete): For the include() function. This message is displayed
 # in a confirmation dialog when the user wants to delete an alias
