Localize "history" rep

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1477,6 +1477,10 @@ firebug.reps.reference=Circular reference
 # example: 1 item in Storage
 # example: 2 items in Storage
 firebug.storage.totalItems=%1$S item in Storage;%1$S items in Storage
+# LOCALIZATION NOTE (firebug.reps.historyEntries): Semicolon list of plural forms.
+# Displayed when evaluating "history" - informs the user about the number of entries in history.
+# %1 = Number of history entries
+firebug.reps.historyEntries=%1$S history entry;%1$S history entries
 # LOCALIZATION NOTE (firebug.reps.table.ObjectProperties):
 # Label used in the header of the output of the console.table() method inside the Console panel,
 # if an object is passed into it.
